# AlgoTrade-Engine

./: .dockerignore  .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  config.py  data_feed.py  exchange.py  models.py  order_manager.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: trading-bot.json
docker/grafana/datasources/: prometheus.yml
features/: __init__.py  cache.py  feature_pipeline.py  indicators.py  ml_signal.py  signal_generator.py
mt5/AlgoTradeEA/: AlgoTradeEA.mq5  README_MT5.md
pine_scripts/: nexus_flow.pine  ph_choch_bos_reversal.pine
strategies/: __init__.py  base.py  engine.py  mean_reversion.py  momentum.py  performance.py  risk_manager.py  trend_follow.py
tests/: __init__.py  test_cache.py  test_config.py  test_core_models.py  test_data_feed.py  test_feature_pipeline.py  test_indicators.py  test_mean_reversion.py  test_ml_signal.py  test_momentum.py  test_order_manager.py  test_paper_exchange.py  test_performance.py  test_risk_manager.py  test_signal_generator.py  test_strategy_base.py  test_strategy_engine.py  test_trend_follow.py
