[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-features"
version = "0.1.0"
description = "Data pipeline, feature engineering, and ML signal generation for algorithmic trading"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pandas>=1.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["features*", "core*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
